--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "pg": "~3.6.2"  
+    "pg": "~3.6.2",
+    "multiline": "~1.0.2"
   }
 }
