--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-    "engines": {
-      "node": "0.12.x"
+  "engines": {
+    "node": "0.12.x"
   },
   "dependencies": {
-    "express": "~4.9.0",
+    "async": "^1.4.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
+    "csv-parse": "^0.1.3",
     "debug": "~2.0.0",
-    "pg": "~3.6.2",
+    "express": "~4.9.0",
+    "got": "~3.3.1",
+    "morgan": "~1.3.0",
     "multiline": "~1.0.2",
+    "pg": "~3.6.2",
+    "pg-copy-streams": "~0.3.0",
+    "serve-favicon": "~2.1.3",
     "whiskers": "~0.3.3"
   }
 }
