--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "cranlogs",
-  "version": "0.0.0",
+  "type": "module",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
   },
   "engines": {
-    "node": "0.12.x"
+    "node": "20.x"
   },
   "dependencies": {
     "async": "^1.4.0",
-    "body-parser": "~1.8.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.3.3",
-    "csv-parse": "^0.1.3",
-    "debug": "~2.0.0",
-    "express": "~4.9.0",
-    "got": "~3.3.1",
-    "morgan": "~1.3.0",
+    "csv-parse": "^5.5.5",
+    "express": "^4.19.2",
+    "got": "^14.2.1",
+    "morgan": "^1.10.0",
     "multiline": "~1.0.2",
     "pg": "~3.6.2",
     "pg-copy-streams": "~0.3.0",
-    "serve-favicon": "~2.1.3",
+    "serve-favicon": "^2.5.0",
     "whiskers": "~0.3.3"
   }
 }
